<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<PreferenceCategory android:title="@string/data_update_frequency">-->

        <!--<ListPreference-->
            <!--android:defaultValue="@string/"-->
            <!--android:dialogTitle="@string/settings_mode_notification"-->
            <!--android:entries="@array/notification_mode_strings"-->
            <!--android:entryValues="@array/notification_mode_values"-->
            <!--android:key="@string/notification_key" />-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/settings_mode_api">

        <ListPreference
            android:defaultValue="@string/default_mode_api"
            android:dialogTitle="@string/settings_mode_api"
            android:entries="@array/mode_strings"
            android:entryValues="@array/mode_values"
            android:key="serverurlmode"
            android:title="@string/settings_mode_api" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_mode_notification">

        <ListPreference
            android:defaultValue="@string/default_mode_notification"
            android:dialogTitle="@string/settings_mode_notification"
            android:entries="@array/notification_mode_strings"
            android:entryValues="@array/notification_mode_values"
            android:key="@string/notification_key" />
    </PreferenceCategory>

</PreferenceScreen>