<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_speakers"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_speaker"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speaker_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BIOGRAPhy"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:paddingRight="10dp">

                    <ImageView
                        android:id="@+id/imageView_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/linkedin"
                        android:tag="@string/linkedin"/>

                    <ImageView
                        android:id="@+id/imageView_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/twitter"
                        android:tag="@string/twitter"/>

                    <ImageView
                        android:id="@+id/imageView_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/facebook"
                        android:tag="@string/fb"/>

                    <ImageView
                        android:id="@+id/imageView_github"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/github"
                        android:tag="@string/github"/>
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_speakers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
